<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >
    <ScrollView
        android:id="@+id/sv_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_above="@+id/btn_play">
	    <TextView
	        android:id="@+id/tv_contents"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	    	android:gravity="left|top"
	    	android:lineSpacingMultiplier="1.2"
	    	android:textSize="@dimen/text_size_normal"
	    	android:text="@string/app_name" />
	</ScrollView>
    <Button
        style="@style/btn.center"
        android:id="@id/btn_play"
        android:layout_above="@+id/btn_stop"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_play" />
    
    <Button
        style="@style/btn.center"
        android:id="@id/btn_stop"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_stop" />
    
    <Button 
        style="@style/btn"
        android:id="@+id/btn_speed_up"
        android:layout_toLeftOf="@id/btn_play"
        android:layout_alignTop="@id/btn_play"
        android:text="@string/btn_speed_up"
        />
    
    <Button 
        style="@style/btn"
        android:id="@+id/btn_speed_down"
        android:layout_toLeftOf="@id/btn_stop"
        android:layout_alignTop="@id/btn_stop"
        android:text="@string/btn_speed_down" />
    
    <Button 
        style="@style/btn"
        android:id="@+id/btn_pitch_up"
        android:layout_alignTop="@id/btn_play"
        android:layout_toRightOf="@id/btn_play"
        android:text="@string/btn_pitch_up"
        />
    
    <Button 
        style="@style/btn"
        android:id="@+id/btn_pitch_down"
        android:layout_alignTop="@id/btn_stop"
        android:layout_toRightOf="@id/btn_stop"
        android:text="@string/btn_pitch_down" />
    
</RelativeLayout>
